keycloak/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 32080
#  - name: https
#    port: 8443
#    targetPort: 8443
#    nodePort: 32083    
  selector:
    app: keycloak
  type: NodePort
#  type: LoadBalancer
