keycloak/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: qlik-nginx
spec:
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            backend:
              serviceName: keycloak-svc
              servicePort: 8080
